--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@mui/x-data-grid": "^7.11.0",
     "@reduxjs/toolkit": "^2.2.6",
